Fix csv download and improve layout

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -125,3 +125,26 @@
     font-size: 10pt;
     margin-bottom: 5px;
 }
+
+.card-header-title {
+    padding-top: 8px;
+    height: 30px;
+}
+
+.chart-label {
+    color: #787878 !important;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.detailed-table-chart {
+    width: 100%;
+    text-align: center;
+    min-height: 100px;
+}
