Fix map print in side detail

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -135,7 +135,7 @@
                                 class="btn btn-default pull-right"><i
                                 class="fa fa-download"></i></button>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body locationsite-map-wrapper">
                         <div id="locationsite-map" class="map"
                              style="height: 300px; width: 100%;"></div>
                         <div id="overview-dashboard-table"
@@ -203,10 +203,6 @@
                                     <div class="chart-label">Sampling method
                                     </div>
                                 </div>
-                                {#                        <div style="width: 10%;">#}
-                                {#                            <button class="btn btn-default btn-element-download pull-right download-origin-chart">#}
-                                {#                                <i class="fa fa-download"></i></button>#}
-                                {#                        </div>#}
                             </div>
                         </div>
                     </div>
