Multi site dashboard (#593)
* Show multi site dashboard

* Show site detail dashboard button in search results

* Fix csv download and improve layout

* Improve layout

* Fix map print in side detail

* Fix chart data

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -49,11 +49,11 @@
     width: 100%;
 }
 
-.dashboard-table table,
-.dashboard-table tr, .dashboard-table td,
-.dashboard-table th {
-    border: 1px solid black;
-}
+/*.dashboard-table table,*/
+/*.dashboard-table tr, .dashboard-table td,*/
+/*.dashboard-table th {*/
+    /*border: 1px solid black;*/
+/*}*/
 
 .dashboard-table td, .dashboard-table th {
     padding: 2px 5px;
@@ -123,5 +123,27 @@
 .download-as-csv {
     text-transform: none;
     font-size: 10pt;
-    margin-bottom: 5px;
+}
+
+.card-header-title {
+    padding-top: 8px;
+    height: 30px;
+}
+
+.chart-label {
+    color: #787878 !important;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.detailed-table-chart {
+    width: 100%;
+    text-align: center;
+    min-height: 100px;
 }
