--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -25,7 +25,7 @@
     <div id="start-tutorial" class="map-legend-symbol control-drop-shadow
     hide-legend" data-toggle="tooltip" data-placement="bottom"
          data-original-title="Start tutorial" data-html="true">
-        <a class="clicklesslink" href="javascript:void(0);"
+        <a style="color: #212529" href="javascript:void(0);"
            onclick="javascript:startIntro();">?</a>
 
         <div id="tutorial" style="display: none"></div>
