Add permalink to the species detailed dashboard

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -96,7 +96,7 @@
         </tr>
         <tr>
             <td>Records</td>
-            <td><%= count %> <a href='/download-csv-taxa-records/<%= id %>'
+            <td><%= count %> <a href='<%= csv_downloads_url %>'
                                 style="text-decoration: underline; font-size: 11pt !important;">Download
                 as CSV</a></td>
         </tr>
