Permalink search with category and origin filter

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -114,7 +114,7 @@
                 ORIGIN <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
-        <div class="row" style="display: none">
+        <div class="row" style="display: none" id="origin-filter-wrapper">
                 <div class="btn-group-wrapper text-center">
                 <input class="origin-checkbox" type="checkbox" value="alien" name="category-value" style="display: none" id="alien"/>
                 <input class="origin-checkbox" type="checkbox" value="indigenous" name="category-value" style="display: none" id="indigenous"/>
