--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -207,13 +207,21 @@
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
-            <div class="row" style="display: none" data-toggle="tooltip"
-                 data-placement="top" title="Coming Soon">
-                <div class="col-lg-12 filter-content conservation-status">
-                    <select disabled>
-                        <option value="">Conservation Status</option>
+            <div class="row" style="display: none">
+                <div class="col-lg-12 filter-content conservation-status-wrapper form-group">
+                    <select multiple  data-placeholder="Select Some Conservation Status" id="conservation-status">
+                        {% for status_data in conservation_status_data %}
+                            <option value="{{ status_data.status }}">{{ status_data.name }}</option>
+                        {% endfor %}
                     </select>
                 </div>
+                <div class="button-filter-wrapper">
+                    <button class="apply-filter">Apply Filter</button>
+                    <button class="clear-filter clear-conservation-filter">Clear
+                        Filter
+                    </button>
+                </div>
+                <div class="small-space"></div>
             </div>
         {% endif %}
 
