--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -323,23 +323,21 @@
         </div>
     </div>
     <div class="row spatial-scale-panel" style="display: none">
-        <div class="small-subtitle">Political Region</div>
-        <div class="col-lg-12 filter-content" id="spatial-scale-container">
+        <div class="small-subtitle">Political Region
+            <i class="fa fa-angle-up pull-right"></i>
         </div>
+        <div class="col-lg-12 filter-content" style="display: none;" id="spatial-scale-container">
+        </div>
+        <div class="small-subtitle">Catchment</div>
+        <div class="col-lg-12 filter-content" id="river-catchment-container">
+        </div>
+
         <div class="col-lg-12 other-filters">
             <div class="container-fluid row">
                 <div class="col-lg-5">Ecoregion</div>
                 <div class="col-lg-7">
                     <select disabled>
                         <option value="">Ecoregion</option>
-                    </select>
-                </div>
-            </div>
-            <div class="container-fluid row">
-                <div class="col-lg-5">Catchment</div>
-                <div class="col-lg-7">
-                    <select disabled>
-                        <option value="">Catchment</option>
                     </select>
                 </div>
             </div>
