Fix tree in frontend

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -326,7 +326,7 @@
         <div class="small-subtitle">Political Region
             <i class="fa fa-angle-up pull-right"></i>
         </div>
-        <div class="col-lg-12 filter-content" style="display: none;" id="spatial-scale-container">
+        <div class="col-lg-12 filter-content" id="spatial-scale-container">
         </div>
         <div class="small-subtitle">Catchment</div>
         <div class="col-lg-12 filter-content" id="river-catchment-container">
