--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2163,9 +2163,17 @@ div:hover::-webkit-scrollbar {
     height: 10px;
 }
 
-.button-filter-wrapper, .sub-filter {
+.button-filter-wrapper, .sub-filter, .spatial-filter-wrapper {
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
+}
+
+.spatial-scale-sub-panel {
+    border-bottom: 1px solid #d6d6d6;
+}
+
+.spatial-scale-sub-panel:hover {
+    cursor: pointer;
 }
