--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -323,13 +323,17 @@
         </div>
     </div>
     <div class="row spatial-scale-panel" style="display: none">
-        <div class="small-subtitle">Political Region
-            <i class="fa fa-angle-up pull-right"></i>
+        <div class="small-subtitle spatial-scale-sub-panel">
+            Political Region
+            <i class="fa fa-angle-down pull-right"></i>
         </div>
-        <div class="col-lg-12 filter-content" id="spatial-scale-container">
+        <div class="col-lg-12 filter-content" id="spatial-scale-container" style="display: none;">
         </div>
-        <div class="small-subtitle">Catchment</div>
-        <div class="col-lg-12 filter-content" id="river-catchment-container">
+        <div class="small-subtitle spatial-scale-sub-panel">
+            Catchment
+            <i class="fa fa-angle-down pull-right"></i>
+        </div>
+        <div class="col-lg-12 filter-content" id="river-catchment-container" style="display: none;">
         </div>
 
         <div class="col-lg-12 other-filters">
