Remove console log

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -1,3 +1,9 @@
+{% load static from staticfiles %}
+<!-- IntroJs -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/introjs.min.css" rel="stylesheet">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/intro.min.js"></script>
+<script type="text/javascript" src="{% static "js/views/introjs-tutorial.js" %}"></script>
+
 <script type='text/html' id='map-template'>
 
     <div id="map" class="map"></div>
