--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2177,3 +2177,8 @@ div:hover::-webkit-scrollbar {
 .spatial-scale-sub-panel:hover {
     cursor: pointer;
 }
+
+.sub-control-panel:active {
+    background-color: #1b900d;
+    color: white;
+}
